<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/acct_group">
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/action_sign_in" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/view_profile" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_48dp"
            android:title="@string/action_sign_out" />
    </group>

    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_guides"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="Troubleshooting and Repair" />
        <item
            android:id="@+id/nav_repair_history"
            android:icon = "@drawable/ic_history_black_24dp"
            android:title = "@string/repair_history" />
        <item
            android:id="@+id/contact_an_expert"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contact_an_expert" />
    </group>


    <group android:id="@+id/help_group">

        <item
            android:id="@+id/get_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help" />

    </group>

</menu>
