<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_guide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.techconnect.activities.PlayGuideActivity">

    <FrameLayout
        android:id="@+id/flowContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"/>

    <ScrollView
        android:id="@+id/session_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_info_long"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="?android:attr/textColorHint">

                <EditText
                    android:id="@+id/department_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/department"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="?android:attr/textColorHint">

                <EditText
                    android:id="@+id/manufacturer_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/manufacturer"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="?android:attr/textColorHint">

                <EditText
                    android:id="@+id/model_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/model_number"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="?android:attr/textColorHint">

                <EditText
                    android:id="@+id/serial_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/serial_number"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="?android:attr/textColorHint">

                <EditText
                    android:id="@+id/problem_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Describe the problem"
                    android:inputType="textMultiLine"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="?android:attr/textColorHint">

                <EditText
                    android:id="@+id/solution_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Describe the solution"
                    android:inputType="textMultiLine"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="?android:attr/textColorHint">

                <EditText
                    android:id="@+id/notes_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Any additional notes"
                    android:inputType="textMultiLine"
                    android:textColor="?android:attr/colorForeground"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/save_session" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=":("
            android:textSize="56sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/error_play_guide"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sync_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/update_guide" />
    </LinearLayout>
</FrameLayout>
