<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/end_session"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/end_session"
        app:showAsAction="always" />
</menu>