...
                android:layout_height="wrap_content"
                android:text="@string/available_guides"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <ListView
                android:id="@+id/guides_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp" />

        </LinearLayout>

...
