...
                android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/options_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flow_imageScrollView"
            android:gravity="center"
            android:minHeight="50dp"
            android:orientation="vertical">
...
